# reservium-api

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  compose.test.yaml  compose.yaml  conda-lock.yml  docker-compose.test.yml  docker-compose.yml  dockerfile  environment-dev.yml  pyproject.toml  renovate.json
.github/: renovate.json
.github/workflows/: build-push-image-dev.yml  build-push-image.yml  create-release-notes.yml  semver-tag.yml  test.yml
app/: .env.dev  .env.template  .pylintrc  alembic.ini  app.dockerfile  mypy.ini
app/app/: credentials.json  main.py  token.json  token.txt
app/app/api/: __init__.py  access_card_system.py  api_base.py  buk_is_auth.py  calendars.py  club_rooms.py  docs.py  emails.py  events.py  exceptions.py  google_auth.py  grills.py  mini_services.py  reservation_services.py  routers.py  study_rooms.py  user_authenticator.py  users.py  utils.py
app/app/core/: __init__.py  config.py  config_email.py  utils.py
app/app/crud/: __init__.py  crud_base.py  crud_calendar.py  crud_event.py  crud_mini_service.py  crud_reservation_service.py  crud_user.py
app/app/db/: __init__.py  base_class.py  session.py
app/app/integrations/: __init__.py
app/app/migration/: env.py
app/app/migrations/: env.py
app/app/models/: __init__.py  calendar.py  calendar_mini_service_association.py  event.py  mini_service.py  reservation_service.py  soft_delete_mixin.py  user.py
app/app/schemas/: __init__.py  access_card_system.py  calendar.py  data_is.py  email.py  event.py  mini_service.py  reservation_service.py  user.py  user_is.py  zone.py
app/app/services/: __init__.py  access_card_system_services.py  calendar_services.py  club_room_services.py  email_services.py  event_services.py  grill_services.py  mini_service_services.py  reservation_service_services.py  service_base.py  study_room_services.py  user_services.py  utils.py
app/scripts/: mypy.sh  pylint.sh  run_tests.sh
app/tests/: __init__.py  conftest.py  utils.py
app/tests/test_api/: conftest.py  test_calendar.py  test_mini_service.py  test_reservation_service.py  test_user.py  test_user_authenticator.py
app/tests/test_crud/: conftest.py  test_calendar.py  test_mini_service.py  test_reservation_service.py  test_user.py
app/tests/test_models/: conftest.py  test_calendar.py  test_mini_service.py  test_reservation_service.py  test_user.py
app/tests/test_schemas/: conftest.py  test_calendar.py  test_event.py  test_mini_service.py  test_reservation_service.py  test_user.py
app/tests/test_services/: conftest.py  test_calendar.py  test_email.py  test_event.py  test_mini_service.py  test_reservation_service.py  test_user.py  test_utils.py
reservation-app/: .env.template  Dockerfile  Makefile  alembic.ini  env.template  mypy.ini  mypy.toml  pyproject.toml  pytest.ini  ruff.toml
reservation-app/app/api/: utils.py
reservation-app/app/core/: config.py
reservation-app/app/crud/: crud_calendar.py  crud_event.py  crud_user.py
reservation-app/app/services/: reservation_service_services.py  service_base.py
reservation-app/scripts/: create_virtual_env.sh  lint_ruff.sh  pytest.sh  ruff.sh  run_migrations.sh  update_virtual_env.sh
reservation-app/src/: main.py
reservation-app/src/api/: __init__.py  api_base.py  dependencies.py  permissions.py  routers.py  user_authenticator.py  utils.py  well_known.py
reservation-app/src/common/: __init__.py  utils.py
reservation-app/src/core/: __init__.py  config.py
reservation-app/src/crud/: __init__.py  crud_base.py  crud_calendar.py  crud_event.py  crud_mini_service.py  crud_reservation_service.py  crud_user.py
reservation-app/tests/: conftest.py  utils.py
scripts/: create_env.sh  lock_environment.sh  run_pre_commit.sh  set_up_poetry_channels.sh  set_up_uv_channels.sh  update_env.sh
(+336 files in other folders)
