[project]
name = "reservium-api"
version = "2.0.0"
description = "Reservium: a ready to go reservation system"
authors = [{ name = "Artem Kuznetsov", email = "artyom.20century@gmail.com" }]
requires-python = "==3.14.3"
dependencies = [
    "fastapi==0.138.0",
    "uvicorn[standard]==0.49.0",
    "pydantic[email]==2.13.4",
    "pydantic-settings==2.14.2",
    "sqlalchemy[asyncio]==2.0.51",
    "asyncpg==0.31.0",
    "pytz==2026.2",
    "alembic==1.18.4",
    "sqlalchemy-easy-softdelete==0.9.1",
    "fastapi-mail==1.6.5",
    "itsdangerous==2.2.0",
    "requests-oauthlib==2.0.0",
    "pypdf==6.13.3",
    "httpx==0.28.1",
    "google-auth-oauthlib==1.4.0",
    "google-api-python-client==2.197.0",
    "python-dateutil==2.9.0.post0",
    "aiohttp==3.14.1",
    "jwcrypto==1.5.7",
    "authzed==1.24.4",
    "authlib==1.7.2",
]

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "pytest-env==1.6.0",
    "mypy==2.1.0",
    "testcontainers==4.14.2",
    "types-pytz==2026.2.0.20260518",
    "types-python-dateutil==2.9.0.20260518",
    "ruff==0.15.19",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
